--- a/OpenEdXMobile/res/values-de-rDE/strings.xml
+++ b/OpenEdXMobile/res/values-de-rDE/strings.xml
@@ -656,4 +656,9 @@ Kontrollieren Sie auch Ihren Spam-Ordner.</string>
   <string name="rating_bar_selection">{rating} von {num_of_stars}</string>
   <!--Title of the Whats New screen e.g. Version 2.8.1 New Features-->
   <string name="whats_new_title">Version {version_number}, Neue Funktionen</string>
+
+  <!-- Tabs Name -->
+  <string name="my_course">Mein Kurs</string>
+  <string name="explore_course">Entdecken</string>
+  <string name="courses">Kurse</string>
 </resources>
