--- a/OpenEdXMobile/res/values-iw/strings.xml
+++ b/OpenEdXMobile/res/values-iw/strings.xml
@@ -667,4 +667,8 @@
   <string name="rating_bar_selection">{rating} מתוך {num_of_stars}</string>
   <!--Title of the Whats New screen e.g. Version 2.8.1 New Features-->
   <string name="whats_new_title">מאפיינים חדשים בגרסה {version_number}</string>
+  <!-- Tabs Name -->
+  <string name="my_course">My Course</string>
+  <string name="explore_course">Explore</string>
+  <string name="courses">Courses</string>
 </resources>
