--- a/OpenEdXMobile/res/values-tr/strings.xml
+++ b/OpenEdXMobile/res/values-tr/strings.xml
@@ -663,4 +663,9 @@
   <string name="rating_bar_selection">{num_of_stars} üzerinden {rating}</string>
   <!--Title of the Whats New screen e.g. Version 2.8.1 New Features-->
   <string name="whats_new_title">Sürüm {version_number} Yeni Özellikler</string>
+
+  <!-- Tabs Name -->
+  <string name="my_course">Kursum</string>
+  <string name="explore_course">Keşfetmek</string>
+  <string name="courses">Dersler</string>
 </resources>
