--- a/OpenEdXMobile/res/values-ar/strings.xml
+++ b/OpenEdXMobile/res/values-ar/strings.xml
@@ -84,10 +84,8 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">عرض التحميلات الحاليّة</string>
-  <!--Title of user's course list screen-->
-  <string name="label_my_courses">المساقات</string>
   <!--Title of user's program list screen-->
-  <string name="label_my_programs">البرامج</string>
+  <string name="label_programs">البرامج</string>
   <!--Title of native Find Courses Screen-->
   <string name="label_find_courses">استكشف المساقات</string>
   <!--Title of Find Courses tab on Main Dashboard screen-->
