--- a/OpenEdXMobile/res/values-de-rDE/strings.xml
+++ b/OpenEdXMobile/res/values-de-rDE/strings.xml
@@ -84,10 +84,8 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">Aktuelle Downloads sehen</string>
-  <!--Title of user's course list screen-->
-  <string name="label_my_courses">Kurse</string>
   <!--Title of user's program list screen-->
-  <string name="label_my_programs">Programme</string>
+  <string name="label_programs">Programme</string>
   <!--Title of native Find Courses Screen-->
   <string name="label_find_courses">Finde Kurse</string>
   <!--Title of Find Courses tab on Main Dashboard screen-->
