--- a/OpenEdXMobile/res/values-fr/strings.xml
+++ b/OpenEdXMobile/res/values-fr/strings.xml
@@ -84,10 +84,8 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">Voir les téléchargements en cours</string>
-  <!--Title of user's course list screen-->
-  <string name="label_my_courses">Cours</string>
   <!--Title of user's program list screen-->
-  <string name="label_my_programs">Programmes</string>
+  <string name="label_programs">Programmes</string>
   <!--Title of native Find Courses Screen-->
   <string name="label_find_courses">Trouver des cours</string>
   <!--Title of Find Courses tab on Main Dashboard screen-->
