--- a/OpenEdXMobile/res/values-pt-rBR/strings.xml
+++ b/OpenEdXMobile/res/values-pt-rBR/strings.xml
@@ -84,10 +84,8 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">Visualizar transferências atuais</string>
-  <!--Title of user's course list screen-->
-  <string name="label_my_courses">Cursos</string>
   <!--Title of user's program list screen-->
-  <string name="label_my_programs">Programas</string>
+  <string name="label_programs">Programas</string>
   <!--Title of native Find Courses Screen-->
   <string name="label_find_courses">Encontre cursos</string>
   <!--Title of Find Courses tab on Main Dashboard screen-->
