--- a/OpenEdXMobile/res/values-tr/strings.xml
+++ b/OpenEdXMobile/res/values-tr/strings.xml
@@ -84,10 +84,8 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">Şu anki indirmeleri görüntüle</string>
-  <!--Title of user's course list screen-->
-  <string name="label_my_courses">Derslerim</string>
   <!--Title of user's program list screen-->
-  <string name="label_my_programs">Programlar</string>
+  <string name="label_programs">Programlar</string>
   <!--Title of native Find Courses Screen-->
   <string name="label_find_courses">Dersleri Bul</string>
   <!--Title of Find Courses tab on Main Dashboard screen-->
