--- a/OpenEdXMobile/res/values-vi/strings.xml
+++ b/OpenEdXMobile/res/values-vi/strings.xml
@@ -83,10 +83,8 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">Xem các mục đang tải xuống</string>
-  <!--Title of user's course list screen-->
-  <string name="label_my_courses">Khóa học</string>
   <!--Title of user's program list screen-->
-  <string name="label_my_programs">Chương trình</string>
+  <string name="label_programs">Chương trình</string>
   <!--Title of native Find Courses Screen-->
   <string name="label_find_courses">Tìm khóa học</string>
   <!--Title of Find Courses tab on Main Dashboard screen-->
