--- a/OpenEdXMobile/res/values-zh/strings.xml
+++ b/OpenEdXMobile/res/values-zh/strings.xml
@@ -84,10 +84,8 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">查看当前下载</string>
-  <!--Title of user's course list screen-->
-  <string name="label_my_courses">课程</string>
   <!--Title of user's program list screen-->
-  <string name="label_my_programs">学习计划</string>
+  <string name="label_programs">学习计划</string>
   <!--Title of native Find Courses Screen-->
   <string name="label_find_courses">发现课程</string>
   <!--Title of Find Courses tab on Main Dashboard screen-->
