--- a/OpenEdXMobile/res/values-iw/strings.xml
+++ b/OpenEdXMobile/res/values-iw/strings.xml
@@ -83,10 +83,8 @@
   <!--Navigation Drawer Labels-->
   <!--Button text to show user current downloads screen-->
   <string name="label_current_downloads">צפו בהורדות המתבצעות כעת</string>
-  <!--Title of user's course list screen-->
-  <string name="label_my_courses">קורסים</string>
   <!--Title of user's program list screen-->
-  <string name="label_my_programs">תכניות</string>
+  <string name="label_programs">תכניות</string>
   <!--Title of native Find Courses Screen-->
   <string name="label_find_courses">מצא קורסים</string>
   <!--Title of Find Courses tab on Main Dashboard screen-->
