--- a/OpenEdXMobile/res/values/strings.xml
+++ b/OpenEdXMobile/res/values/strings.xml
@@ -482,9 +482,9 @@
     <string name="video_player_forward_time_sec">+15</string>
 
     <!-- Button label to bring up course finder -->
-    <string name="find_course_text">Looking for a new challenge?</string>
+    <string name="find_course_text">Looking for a new \nchallenge?</string>
     <!-- Button label to bring up course finder -->
-    <string name="find_course_btn_text">Find a Course</string>
+    <string name="find_course_btn_text">Explore courses</string>
     <!-- Message between sign in button and social login buttons -->
     <string name="or_sign_in_with">Or sign in with</string>
     <!-- Facebook login method -->
