--- a/OpenEdXMobile/res/values/strings.xml
+++ b/OpenEdXMobile/res/values/strings.xml
@@ -97,7 +97,7 @@
     <!-- Title of native Find Courses Screen -->
     <string name="label_find_courses">Find Courses</string>
     <!-- Title of Find Courses tab on Main Dashboard screen -->
-    <string name="label_discovery">Discovery</string>
+    <string name="label_discover">Discover</string>
     <!-- Button allowing users to send an email for feedback -->
     <string name="label_submit_feedback">Submit feedback</string>
     <!-- Toggle switch on state label -->
